--- a/frontend/src/static/css/config/_light_theme.scss
+++ b/frontend/src/static/css/config/_light_theme.scss
@@ -220,7 +220,7 @@ body {
 	/* ################################################## */
 
 	--add-media-page-tmplt-dialog-bg-color: #fff;
-	--add-media-page-tmplt-uploader-bg-color: var(--body-bg-color);
+	--add-media-page-tmplt-uploader-bg-color: var(--user-action-form-inner-bg-color);
 	--add-media-page-tmplt-dropzone-bg-color: var(--cinemata-neutral-100);
 	--add-media-page-tmplt-dropzone-border-color: var(--cinemata-neutral-400);
 	--add-media-page-tmplt-drag-drop-inner-text-color: var(--cinemata-neutral-900);
